syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "CareerCloud.Grpc.Protos";

service CompanyJob{
	rpc GetCompanyJob(IdRequest4) returns (CompanyJobReply);
    rpc GetCompanyJobs(google.protobuf.Empty) returns (CompanyJobs);
    rpc AddGetCompanyJobs(CompanyJobs) returns (google.protobuf.Empty);
    rpc UpdateGetCompanyJobs(CompanyJobs) returns (google.protobuf.Empty);
    rpc DeleteGetCompanyJobs(CompanyJobs) returns (google.protobuf.Empty);
}

message  CompanyJobs{
    repeated CompanyJobReply CompanyJobReplies = 1;
}

message IdRequest4 {
	string Id = 1;
}

message CompanyJobReply{
         string Id=1;
         string Company=2;
         google.protobuf.Timestamp ProfileCreated=3;
         bool IsInactive=4;
         bool IsCompanyHidden=5; 
}